not a whole lot of progress, still gotta fix filepaths
yes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Home</h1>
+			<h1>Alexandru Ivascu</h1>
 		</header>
 		{{#if msg}}
  			<aside>
@@ -23,8 +23,14 @@
 			</aside>
 		{{/if}}
 		<main>
-			<img src="/public/profilePicture.png">
-			<p>This is Alexandru Ivascu's personal webpage. Users can check out my personal skills, projects, etc. here.</p>
+			<img src="{{host}}/profilePicture.png">
+			<br><br><br><br><br><br>
+			<p><b>Nationality:</b> Romanian</p>
+			<img src="/public/photos/contact.png"><p>0040744547087</p>
+			<p><b>Date of Birth:</b> 24/07/2000</p>
+			<p><b>Gender:</b> Male</p>
+			<img src="{{host}}/mail.png"><p>alexandru.ivascu247@gmail.com</p>
+			<p><b>Address: </b>Constantin Bratescu St., Ap. 3, no. 10A, 900670 Constanta (Romania)</p>
 			<table>
   				<tr>
     				<th>Skill</th>
